# openai-client

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
src/openai/: audio.rs  chat.rs  client.rs  completions.rs  edits.rs  embeddings.rs  images.rs  mod.rs  models.rs  usage.rs
