[package]
edition = "2021"
name = "openai-client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
reqwest = { version = "0.11.18", features = ["json", "multipart", "gzip"] }
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.99"
serde_with = "3.0.0"
tokio = { version = "1.29.1", features = ["full"] }
